--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1843,92 +1843,77 @@ a:focus, a:hover {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
-    text-align: center;
+text-align: center;
     margin-bottom: 30px;
     margin-right: 0;
   }
 }
-
 .user-login .block .image img {
   border-radius: 8px;
 }
-
 .user-login .block .content {
   -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   padding: 50px;
   border: 1px solid #cccccc;
   border-radius: 4px;
 }
-
 @media (max-width: 768px) {
   .user-login .block .content {
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
   }
 }
-
 .user-login .block .content .logo {
   margin-bottom: 30px;
 }
-
 @media (max-width: 992px) {
   .user-login .block .content .logo {
     margin-bottom: 30px;
   }
 }
-
 .user-login .block .content .title-text {
   margin-bottom: 25px;
 }
-
 .user-login .block .content .title-text h3 {
   padding-bottom: 20px;
   border-bottom: 1px solid #cccccc;
 }
-
 .user-login .block .content .new-acount {
   margin-top: 20px;
 }
-
-.user-login .block .content .new-acount p, .user-login .block .content .new-acount a {
+.user-login .block .content .new-acount p,
+.user-login .block .content .new-acount a {
   font-size: 14px;
 }
-
 .user-login .block .content .new-acount p a {
   color: #000;
 }
-
 .coming-soon {
   color: #000;
   padding: 120px 0;
   height: 100vh;
 }
-
 @media (max-width: 992px) {
   .coming-soon {
     padding: 80px 0;
   }
 }
-
 .coming-soon .block h3 {
   color: #808080;
 }
-
 .coming-soon .block .count-down {
   margin-top: 70px;
 }
-
 @media (max-width: 768px) {
   .coming-soon .block .count-down {
     margin-top: 40px;
   }
 }
-
 .coming-soon .block .count-down .syotimer-cell {
   min-width: 200px;
   padding: 45px 0;
@@ -1937,7 +1922,6 @@ a:focus, a:hover {
   background: #fff;
   display: inline-block;
 }
-
 .coming-soon .block .count-down .syotimer-cell .syotimer-cell__value {
   font-size: 65px;
   line-height: 80px;
@@ -1945,28 +1929,24 @@ a:focus, a:hover {
   position: relative;
   font-weight: bold;
 }
-
 .coming-soon .block .count-down .syotimer-cell .syotimer-cell__unit {
   font-size: 20px;
   color: #6c6c6c;
   text-transform: uppercase;
   font-weight: normal;
 }
-
 .address .block .address-block {
   text-align: center;
 }
-
 .address .block .address-block .icon {
   margin-bottom: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
-
 .address .block .address-block .icon i {
   display: block;
   height: 100px;
@@ -1977,16 +1957,13 @@ a:focus, a:hover {
   text-align: center;
   line-height: 100px;
 }
-
 .address .google-map {
   position: relative;
 }
-
 .address .google-map #googleMap {
   height: 400px;
   width: 100%;
 }
-
 div.hero-nature {
   text-align: center;
   background: url(D:\OneDrive - Binary 01 Limited\Binary 01\EtherWebsite\ether.co.uk\public\images\background\comming-soon.png);
@@ -1995,7 +1972,6 @@ div.hero-nature {
   padding-top: 0px;
   padding-bottom: 0px;
 }
-
 body.hero-nature {
   text-align: center;
   background: url(D:\OneDrive - Binary 01 Limited\Binary 01\EtherWebsite\ether.co.uk\public\images\background\comming-soon.png);
@@ -2004,5 +1980,10 @@ body.hero-nature {
   padding-top: 0px;
   padding-bottom: 0px;
 }
-        
+
+.btn-label {position: relative;left: -12px;display: inline-block;padding: 6px 12px;background: rgba(0,0,0,0.15);border-radius: 3px 0 0 3px;}
+.btn-labeled {padding-top: 0;padding-bottom: 0;}
+.btn { margin-bottom:10px; 
+}
+
 /*# sourceMappingURL=maps/style.css.map */
