--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1986,4 +1986,26 @@ body.hero-nature {
 .btn { margin-bottom:10px; 
 }
 
+content div.example h3 
+{ 
+  text-align: center; 
+  font-size: xx-large; 
+  font-family: sans-serif; 
+} 
+
+content div.example strong 
+{ 
+  font-size: large; 
+  color: #999999; 
+  font-family: monospace; 
+  text-decoration: underline; 
+  font-weight: bold; 
+} 
+.row [class*="span"] {
+  padding: 0!important;
+}
+.pull-right {
+  float: right !important;
+} 
+
 /*# sourceMappingURL=maps/style.css.map */
