--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2007,5 +2007,35 @@ content div.example strong
 .pull-right {
   float: right !important;
 } 
-
+.btn-custom {
+  background-color: #08c;
+  border-color: #08c;
+  -webkit-text-fill-color: #fff;
+}
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:active,
+.btn-custom.active {
+  background-color: #0077b3;
+  border-color: #006699;
+}
+.btn-custom.disabled:hover,
+.btn-custom.disabled:focus,
+.btn-custom.disabled:active,
+.btn-custom.disabled.active,
+.btn-custom[disabled]:hover,
+.btn-custom[disabled]:focus,
+.btn-custom[disabled]:active,
+.btn-custom[disabled].active,
+fieldset[disabled] .btn-custom:hover,
+fieldset[disabled] .btn-custom:focus,
+fieldset[disabled] .btn-custom:active,
+fieldset[disabled] .btn-custom.active {
+  background-color: #08c;
+  border-color: #08c;
+}
+.btn-huge{
+  padding-top:20px;
+  padding-bottom:20px;
+}
 /*# sourceMappingURL=maps/style.css.map */
