--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2159,5 +2159,12 @@ body p {
     font-family: 'Roboto', sans-serif;
 }
 
+div.sales-reg {
+    font: rgb(50, 25, 160);
+    font-family: Arial;
+    font-size: 13.5px;
+    font-style: bold;
+}
+
 
 /*# sourceMappingURL=maps/style.css.map */
