--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2158,3 +2158,29 @@ body p {
     transition: .3s ease all;
     font-family: 'Roboto', sans-serif;
 }
+
+.slide-fade li {
+    transition: all 0.4s ease-out;
+    opacity: 0;
+}
+
+li {
+    list-style: none;
+    background: #d1703c;
+    color: #fff;
+    height: 0;
+    line-height: 2em;
+    margin: 0;
+    padding: 0 0.5em;
+    overflow: hidden;
+    width: 10em;
+}
+
+li.show {
+    height: 2em;
+    margin: 2px 0;
+}
+
+.slide-fade li.show {
+    opacity: 1;
+}
